# sense-testing

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: release.yaml  test.yaml
