[workspace]
resolver = "2"
members = [
  "packages/desktop/src-tauri"
]

packacge.version = "3.0.0-alpha.0"
package.authors = ["Rui Maciel <ruigouveiamaciel@proton.me>"]
package.license = "MIT"
package.repository = "https://github.com/scientisst/sense-web"
package.rust-version = "1.77"
package.edition = "2021"

[workspace.dependencies]
tauri-build = "2.0.0-beta.10"
tauri = "2.0.0-beta.13"
tauri-plugin-shell = "2.0.0-beta.3"
serde_json = "1.0"
serde = "1.0"
